tests/harness/errors/130_simple_lookup_key_not_found.eu
y: 5
result: { x: 1 }.y
